# AI-manager

./: .gitignore  main.py  pyproject.toml  requirements.txt
aihub/: libs.json
aihub/daemon/: session_daemon.py
aihub/libs/example/: triggers.py
aihub/libs_manager/: __init__.py  json_utils.py  lib.py
aihub/session/: __init__.py  context.py
aihub/tools_manager/: __init__.py  __main__.py  lib_runner.py  manager.py
aihub/tools_manager/router/: __init__.py  make_global.py
aihub/tools_manager/router/router_lib/: pyproject.toml
aihub/tools_manager/router/router_lib/router_lib/: __init__.py  router.py
aihub/tools_manager/router/router_lib/router_lib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
aihub/triggers_manager/: trigger_context.py
aihub/triggers_manager/message_queue/: __init__.py  queue.py
aihub/utils/: __init__.py  random.py
aimanager/daemon/: session_daemon.py
aimanager/message_queue/: __init__.py  queue.py
aimanager/session/: __init__.py  context.py
aimanager/tools_manager/: cmd.py  router.py
aimanager/triggers/: trigger_context.py
aimanager/utils/: __init__.py  random.py
